<resources>
    <string name="app_name">LocationTracker_Parent</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_the_date_of_tracking">Please choose the date of tracking</string>
    <string name="ok">OK</string>
    <string name="required_email">Required email</string>
    <string name="required_password">Required password</string>
    <string name="authentication_successful">Authentication successful</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="sign_out_successful">Sign out successful</string>
    <string name="user_with_email">\"User with email: \"</string>
    <string name="was_signed_up">\" was signed up\"</string>
    <string name="signing_up_failed">Signing up failed</string>
    <string name="there_is_no_track">There is no track for chosen date</string>
    <string name="you_havent_sign_in">You haven\'t sign in yet</string>
    <string name="invalid_code">Invalid code</string>
    <string name="verification_failed">Verification failed</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="quota_exceeded">Quota exceeded. Try later</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location_tracker">Location Tracker</string>
    <string name="please_choose_the_way_of_signing_in">Please choose the way of signing in</string>
    <string name="tv_welcome">Welcome !</string>
    <string name="phone_number">Phone number</string>
    <string name="verification_code">Verification code</string>
    <string name="verify_code">Verify Code</string>
    <string name="request_code">Request Code</string>
    <string name="parent_edition">Parent edition</string>
    <string name="sign_out">Sign out</string>
    <string name="error_getting_documents">Error getting documents</string>
</resources>